# config

./: .gitignore  btrbk.elara.conf  btrbk.phobos.conf  dircolors  gpinit.gp  install.sh  xmobarrc  xmodmap  xresources
bitlbee/: bitlbee.conf
emacs/: ertes-chicken.el  ertes-cmd.el  ertes-dired.el  ertes-edit.el  ertes-haskell.el  ertes-ledger.el  ertes-mail.el  ertes-org.el  ertes-paredit.el  ertes-python.el  ertes-time.el
files/: .Xdefaults  .compton.conf  .drirc  .emacs  .ghci  .gitconfig  .gprc  .haskeline  .stalonetrayrc  .toprc  .xsession  .xsession.backup  .zshenv  .zshrc
files/.config/: redshift.conf
files/.emacs.d/snippets/agda2-mode/: mod
files/.mpd/: mpd.conf
files/.mpv/: config  input.conf
files/.ncmpc/: config  keys
files/.nixpkgs/: config.nix  home.nix
mytaffybar/: Main.hs  default.nix  mytaffybar.cabal
myxmonad/: Main.hs  default.nix  myxmonad.cabal
myxmonad/MyXMonad/: Audio.hs  Window.hs  Workspace.hs
postgres/: postgresql.conf
scripts/: Makefile  default.nix  ghc.nix  lock-desktop.hs  mailwatch.hs
services/bitlbee/: run
services/compton/: run
services/disk_indicator/: run
services/emacs/: run  screenrc
services/mailwatch/: run
services/mpd/: run
services/mytaffybar/: run
services/myxmonad/: run
services/postgres/: run
services/postgres/log/: run
services/redshift/: run
services/syncthing/: run
services/transmission/: run
services/trayer/: run
services/unclutter/: run
services/urxvtd/: run
services/xmobar/: run
services/xscreensaver/: run
services/znc/: run
(+14 files in other folders)
