name:          myxmonad
version:       0.1.0
category:      System
synopsis:      XMonad configuration
maintainer:    Ertugrul Söylemez <esz@posteo.de>
author:        Ertugrul Söylemez <esz@posteo.de>
copyright:     (c) 2016 Ertugrul Söylemez
build-type:    Simple
cabal-version: >= 1.10
description:
    This package contains my XMonad configuration.

executable myxmonad
    build-depends:
        base >= 4.5 && < 5,
        lens,
        mtl,
        random,
        transformers,
        xmonad,
        xmonad-contrib
    default-language: Haskell2010
    ghc-options: -W -threaded
    main-is: Main.hs
    other-extensions:
        FlexibleContexts
    other-modules:
        MyXMonad.Window
        MyXMonad.Workspace
